# Day19-Track2-VectorFeatureStore-Lab

./: PLAN.md  pyproject.toml  setup-docker.sh
app/feast_repo/: feature_store.yaml
notebooks/: 01_embeddings_index.ipynb  02_hybrid_search_rrf.ipynb  03_search_api_benchmark.ipynb  04_feast_feature_store.ipynb  _setup.ipynb
submission/: REFLECTION.md
