[project]
name = "day19-vector-feature-store-lab"
version = "0.1.0"
description = "VinUni AICB Day 19 — Vector Store + Feature Store lab (Track 2)"
requires-python = ">=3.10"
readme = "README.md"

# Lite-path dependencies (mirrors requirements.txt).
# `uv pip install -e .` is faster than the venv+pip path; both work.
dependencies = [
    "qdrant-client[fastembed]>=1.12,<2.0",
    "fastembed>=0.4,<1.0",
    "rank-bm25>=0.2.2,<1.0",
    "feast>=0.41,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "polars>=1.13.2,<2.0",
    "pyarrow>=17,<22",
    "jupyterlab>=4.3,<5.0",
    "jupytext>=1.16,<2.0",
    "pytest>=8.3,<9.0",
]

[project.optional-dependencies]
docker = [
    "redis>=5.0,<6.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "sentence-transformers>=3.3,<4.0",
    "openai>=1.55,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["app", "scripts"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
